--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ coap-message = { version = "0.1.1", optional = true }
 coap-handler = { version = "0.0.2", optional = true }
 serde = { version = "1.0.123", default-features = false, features = ["alloc"], optional = true }
 coap-numbers = { version = "^0.1", optional = true }
+chrono = "*"
 
 [features]
 default = ["std"]
@@ -36,3 +37,6 @@ maintenance = { status = "passively-maintained" }
 [[example]]
 name = "server_coaphandler"
 required-features = ["example-server_coaphandler"]
+
+[[example]]
+name = "server_tcp"
