--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,16 @@ coap-message = { version = "0.1.1", optional = true }
 coap-handler = { version = "0.0.2", optional = true }
 serde = { version = "1.0.123", default-features = false, features = ["alloc"], optional = true }
 coap-numbers = { version = "^0.1", optional = true }
+
+[dev-dependencies]
 chrono = "*"
+rustls = "0.19.1"
+env_logger = "0.8.2"
+log = "0.4.4"
+webpki = "0.21.0"
+webpki-roots = "0.21"
+criterion = "0.3.0"
+rustls-pemfile = "0.2.1"
 
 [features]
 default = ["std"]
