--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ webpki = "0.21.0"
 webpki-roots = "0.21"
 criterion = "0.3.0"
 rustls-pemfile = "0.2.1"
+rand = "0.8.0"
+serde_json = "1"
 
 [features]
 default = ["std"]
