--- a/examples/coap_proxy/Cargo.toml
+++ b/examples/coap_proxy/Cargo.toml
@@ -9,3 +9,5 @@ coap-lite = { path = "../../" }
 tokio = { version = "1.0", features = [ "full" ] }
 tokio-rustls = "0.22"
 argh = "*"
+log = "0.4.0"
+env_logger = "0.8.4"
