--- a/examples/coap_proxy/Cargo.toml
+++ b/examples/coap_proxy/Cargo.toml
@@ -14,5 +14,7 @@ env_logger = "0.8.4"
 x509-parser = "0.9.2"
 redis = { version = "0.20", features = ['r2d2'] }
 r2d2 = "*"
-serde_json = "*"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 base64 = "0.13.0"
+rand = "*"
